--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h1 class="mb-0">Moore
             <span class="text-primary">Zhang</span>
           </h1>
-          <div class="subheading mb-5">288E Bukit Batok Street 25 (S)654288 (65) 86190759 ·
+          <div class="subheading mb-5">288E Bukit Batok Street 25 (S)654288. (65) 86190759 ·
             <a href="mailto:moorezhang64@gmail.com">moorezhang64@gmail.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
