--- a/index.html
+++ b/index.html
@@ -180,7 +180,19 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline dev-icons">
+          <ul class="list-group">
+            <li class="list-inline-item">Frame Work</li>
+            <li class="list-inline-item">Programming Experience</li>
+            <li class="list-inline-item">Operating System</li>
+            <li class="list-inline-item">Server Experience</li>
+            <li class="list-inline-item">Database</li>
+            <li class="list-inline-item">IDE</li>
+            <li class="list-inline-item">CAD</li>
+            <li class="list-inline-item">Languages</li>
+            <li class="list-inline-item">Other skills</li>
+          </ul>
+          <!-- <ul class="list-inline dev-icons">
+
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
             </li>
@@ -217,7 +229,7 @@
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
             </li>
-          </ul>
+          </ul> -->
 
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
