--- a/index.html
+++ b/index.html
@@ -149,24 +149,33 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">National University of Singapore, Singapore</h3>
+              <div class="subheading mb-3">Post Graduate Diploma in Systems Analysis</div>
+              <ul class="list-group">
+                <b>Courses Taken Included:</b>
+                <li class="list-inline-item">Application Development Life Cycle</li>
+                <li class="list-inline-item">Project Management</li>
+                <li class="list-inline-item">Object-Oriented Programming</li>
+                <li class="list-inline-item">EJB (Enterprise Java Bean) on J2EE</li>
+                <li class="list-inline-item">Internet Programming With Microsoft .NET Framework</li>
+                <li class="list-inline-item">Data structure</li>
+                <li class="list-inline-item">SQL programming</li>
+              </ul>
+              <br>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">August 2014 – September 2015</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">JIANGSU University, China</h3>
+              <div class="subheading mb-3">Major in Fluid Machinery and Automatic Control</div>
+              <p>Advisor:  Prof. YUAN Shouqi, Jiangsu University’s President</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">September 2010 – June 2014</span>
             </div>
           </div>
 
