--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/moore-zhang-6b3966a1/">
               <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="#">
@@ -95,8 +95,9 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
+              <h3 class="mb-0">Application Developer</h3>
+              <div class="subheading mb-3">Integral Solutions (Asia) Pte Ltd</div>
+              <h5>Intelligent Student-Teacher Analytics Resource system & Microsoft Dynamic CRM</h5>
               <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -106,12 +107,16 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Software developer</h3>
+              <div class="subheading mb-3">iBosses Pte Ltd</div>
+              <h5>GPS Tracking System & Admin Dashboard </h5>
+              <p>Played a key role in communicate with GPS tracker provider, analyze protocols, and gather user’s requirements, to built incoming locations database server using Amazon EC2.</p>
+              <p>Motivated by P2P business trend, we (a team of 2) developed a vehicle location system based on GPS location tracker and GPRS network, which mainly handling three functions, analyze GPS tracker protocol, locate vehicles and calculate the vehicle path. The front-end is built with HTML5 and Google Maps APIs. The backend write on PHP Laravel5.1 frame work, database built with MariaDB which deployed on Amazon EC2 server.</p>
+              <p>At the same time, with the help of a senior, I built admin dashboard, which mainly for CRUD business models, handle unexpected queries, batch import or export csv files, custom select, image upload, and taxonomy issues. Act as a key role to implement web API, Laravel5.1 and many other front-end plugins, such as bootstrap table, x-editor, select2, jQuery data-picker, google maps.</p>
+              <p>Daily report to supervisor and CEO, to gather further feedbacks for system improvements.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">November 2015 – March 2016</span>
             </div>
           </div>
 
@@ -190,15 +195,15 @@
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-group">
-            <li class="list-inline-item">Frame Work</li>
-            <li class="list-inline-item">Programming Experience</li>
-            <li class="list-inline-item">Operating System</li>
-            <li class="list-inline-item">Server Experience</li>
-            <li class="list-inline-item">Database</li>
-            <li class="list-inline-item">IDE</li>
-            <li class="list-inline-item">CAD</li>
-            <li class="list-inline-item">Languages</li>
-            <li class="list-inline-item">Other skills</li>
+            <li class="list-inline-item"><b>Frame Work:</b> ASP.NET, Laravel5, Spring MVC</li>
+            <li class="list-inline-item"><b>Programming Experience:</b> Proficient with PHP, C#, Java/J2EE, SQL, JavaScript, Python, C</li>
+            <li class="list-inline-item"><b>Operating System:</b> Windows, Mac OS and Linux (mainly ubuntu)</li>
+            <li class="list-inline-item"><b>Server Experience:</b> Microsoft Azure Cloud, Google Cloud Platform, Apache, IIS, Glassfish, Amazon EC2</li>
+            <li class="list-inline-item"><b>Database:</b> MS SQL Server, MySQL, MariaDB</li>
+            <li class="list-inline-item"><b>IDE:</b> Atom, Visual Studio, Brackets, Net Beans, Eclipse</li>
+            <li class="list-inline-item"><b>CAD:</b> Familiar with Auto CAD, PRO/E, UG, CAXA</li>
+            <li class="list-inline-item"><b>Languages:</b> Chinese native; English proficient</li>
+            <li class="list-inline-item"><b>Other skills:</b> Photoshop, Sequel Pro, Git</li>
           </ul>
           <!-- <ul class="list-inline dev-icons">
 
@@ -240,7 +245,7 @@
             </li>
           </ul> -->
 
-          <div class="subheading mb-3">Workflow</div>
+          <!-- <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -254,7 +259,7 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum</li>
-          </ul>
+          </ul> -->
         </div>
       </section>
 
