--- a/index.html
+++ b/index.html
@@ -70,20 +70,7 @@
             <a href="mailto:moorezhang64@gmail.com">moorezhang64@gmail.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <div class="social-icons">
-            <a href="https://www.linkedin.com/in/moore-zhang-6b3966a1/">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-          </div>
+
         </div>
       </section>
 
@@ -307,6 +294,27 @@
               Place - James Buchanan High School - Hackathon 2005</li>
           </ul>
         </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" >
+        <div>
+          <p>Connect me:</p>
+          <div class="social-icons">
+            <a href="https://www.linkedin.com/in/moore-zhang-6b3966a1/">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </div>
+        </div>
+
       </section>
 
     </div>
